--- a/style.css
+++ b/style.css
@@ -3,52 +3,31 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
 
-/* .wrapper {
-    background-color: #ccc;
+}
+/* ul{
+    font-size: 2em;
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap;
     width: 500px;
+    height: 500px;
     margin: 10px auto;
-    padding: 25px;
+    justify-content: space-between;
+    
 }
-
-select {
-    display:block;
-    width: 100%;
-    padding: 5px;
-    font-size: 18px;
-    color: #777;
+li{
+    flex-basis: calc(500px / 4 - 10px);
+   
+    border: 1px dashed #999;
+    text-align: center;
+    height: calc(500px / 4 - 10px);
+    line-height: calc(500px / 4 - 10px);
 } */
-.wrapper{
-    background-color: #eee;
-    width: 550px;
-    position: 30px;
-    margin: 10px auto;
-}
-input{
-    display: block;
+.wrap{
+    background-color: darkgrey;
     padding: 10px;
-    width: 100%;
-    margin: 10px 0;
-
-}
-.message{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: 
-    center;
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 5px;
-
-}
-.succses{
-background-color: green;
-border: 1px solid #009900;
-}
-.error{
-    background-color: #f48a8a;
-    border: 1px solid #990000;
-}
-.warning{
-    background-color: #f4ef8a;
-    border: 1px solid #996100;
+    margin: 15px 0;
 }
